=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.1.6
 - Fixed: Media Viewer "relates to" table doesn't obey "show last change" option in GEDCOM config (canajun2eh)
 - Fixed: [ 2251169 ] Error Adding FAQ entry (canajun2eh)
 - Changed: Improvements to Media upload and Media editing (canajun2eh)
 - Fixed: [ 2003907 ] Redundancy info, "On This Day" block (fisharebest)
 - Added: Improvement to Notes positioning and appearance when enlarged Lightbox Image Notes icon is clicked. (windmillway)
 - Fixed: [ 2217714 ] Changes to Thumbnail Behavior for Non-Images (windmillway)
 - Fixed: [ 2156359 ] Recent Changes Block Not Sorted by Time (fisharebest)
 - Fixed: [ 2193279 ] Merge trouble with upper/lower case (fisharebest)
 - Added: Support for Romanian language (canajun2eh)
 - Changed: Installation Wizard, Step 4, when using IE produces incorrect page format (canajun2eh)
 - Fixed: [ 2173838 ] New family not shown on relationship tab (opus27)
 - Changed: Use normal page headers when editing existing site config (canajun2eh)
 - Fixed: [ 2193733 ] Installation Wizard won't complete (canajun2eh)
 - Fixed: [ 2209285 ] Incorrect action when editing completely empty Place (canajun2eh)
 - Fixed: [ 2199778 ] [4146] Adding Parents in Quick Edit Copies Marriage (fisharebest)
 - Fixed: [ 2203023 ] Installation Wizard breaks $INDEX_DIRECTORY setting (canajun2eh)
 - Fixed: Thumbnail positioning on mediaviewer page. (windmillway)
 - Fixed: Incorrect "loopback" to mediaviewer page if "Use Media Viewer" item set to Yes in the config page. (windmillway)
 - Added: Show thumbnails for URL images/videos/pages on multimedialist, mediaviewer, and media tab pages (windmillway)
 - Fixed: [1882147] Fan (circle) chart gets corrupted at 10th generation (fisharebest)